# radiko_timeshift_recorder

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  entrypoint.bash  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push-image.yml  generate-json-schema.yaml  test.yml  workflow.yml
radiko_timeshift_recorder/: __main__.py  cli.py  client.py  download.py  fs_unix.py  get_duration.py  job.py  job_queue.py  programs.py  put_job_from_url.py  put_jobs_from_schedule.py  radiko.py  rules.py  server.py  trim_filestem.py  util.py
radiko_timeshift_recorder/commands/: gen_json_schema_for_rules.py  put_job_from_url.py  put_jobs_from_schedule.py  put_jobs_from_schedule_by_rules.py  run_server.py
tests/: conftest.py  test_download.py  test_fs_unix.py  test_get_duration.py  test_job.py  test_job_queue.py  test_programs.py  test_radiko.py  test_rules.py  test_server.py  test_trim_filestem.py
tests/data/: schedule.xml
