[project]
name = "radiko-timeshift-recorder"
version = "0.1.0"
description = "Radiko timeshift recorder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "logzero>=1.7.0",
    "pydantic>=2.13.4",
    "pydantic-xml>=2.20.0",
    "pydantic-yaml>=1.6.0",
    "requests>=2.33.1",
    "streamlink>=8.4.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "types-requests>=2.33.0.20260408",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
markers = [
    "radiko: tests that require access to radiko services",
]
